Add Nikita's changes

--- a/sources/Fedorovsk-Regular.ufo/glyphs/contents.plist
+++ b/sources/Fedorovsk-Regular.ufo/glyphs/contents.plist
@@ -1084,5 +1084,7 @@
     <string>uni1D_F_8.glif</string>
     <key>uni1DF9</key>
     <string>uni1D_F_9.glif</string>
+    <key>uni04410483</key>
+    <string>uni04410483.glif</string>
   </dict>
 </plist>
