--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -4,15 +4,13 @@
 #
 #    pip-compile requirements-test.in
 #
-absl-py==2.2.2
+absl-py==2.3.1
     # via
     #   gftools
     #   nanoemoji
     #   picosvg
 afdko==4.0.2
     # via gftools
-appdirs==1.4.4
-    # via fs
 attrs==25.3.0
     # via
     #   cattrs
@@ -20,11 +18,11 @@ attrs==25.3.0
     #   statmake
     #   trio
     #   ufolib2
-axisregistry==0.4.12
+axisregistry==0.4.16
     # via
     #   fontbakery
     #   gftools
-babelfont==3.1.2
+babelfont==3.1.3
     # via
     #   collidoscope
     #   gftools
@@ -49,11 +47,11 @@ bump2version==1.0.1
     # via bumpfontversion
 bumpfontversion==0.4.1
     # via gftools
-cattrs==24.1.3
+cattrs==25.1.1
     # via
     #   statmake
     #   ufolib2
-certifi==2025.4.26
+certifi==2025.8.3
     # via
     #   requests
     #   selenium
@@ -75,9 +73,9 @@ commandlines==0.4.1
     # via ufolint
 compreffor==0.5.6
     # via ufo2ft
-cryptography==44.0.3
+cryptography==45.0.5
     # via pyjwt
-defcon[lxml,pens]==0.12.1
+defcon[lxml,pens]==0.12.2
     # via
     #   afdko
     #   fontbakery
@@ -87,21 +85,21 @@ defcon[lxml,pens]==0.12.1
     #   ufoprocessor
 dehinter==4.0.0
     # via fontbakery
-deprecated==1.2.18
-    # via pygithub
-diffenator2==0.4.5
+diffenator2==0.4.9
+    # via gftools
+ffmpeg-python==0.2.0
     # via gftools
 filelock==3.18.0
     # via youseedee
 font-v==2.1.0
     # via gftools
-fontbakery[beautifulsoup4,googlefonts,googlefontsalwayslatest,shaperglot]==0.13.2
+fontbakery[beautifulsoup4,googlefonts,googlefontsalwayslatest,shaperglot]==1.0.1
     # via
     #   -r requirements-test.in
     #   gftools
-fontfeatures==1.8.0
+fontfeatures==1.9.0
     # via gftools
-fontmake[json]==3.10.0
+fontmake[json]==3.10.1
     # via gftools
 fontmath==0.9.4
     # via
@@ -111,11 +109,11 @@ fontmath==0.9.4
     #   mutatormath
     #   ufo2ft
     #   ufoprocessor
-fontparts==0.12.5
+fontparts==0.13.2
     # via ufoprocessor
 fontpens==0.2.4
     # via defcon
-fonttools[lxml,ufo,unicode,woff]==4.57.0
+fonttools[lxml,ufo,unicode,woff]==4.59.0
     # via
     #   afdko
     #   axisregistry
@@ -155,11 +153,9 @@ freetype-py==2.3.0
     # via
     #   diffenator2
     #   fontbakery
-fs==2.4.16
-    # via
-    #   fontfeatures
-    #   fonttools
-gflanguages==0.7.3
+future==1.0.0
+    # via ffmpeg-python
+gflanguages==0.7.6
     # via
     #   diffenator2
     #   fontbakery
@@ -169,18 +165,18 @@ gfsubsets==2024.9.25
     # via
     #   fontbakery
     #   gftools
-gftools[qa]==0.9.79
+gftools[qa]==0.9.88
     # via -r requirements-test.in
 gitdb==4.0.12
     # via gitpython
-gitpython==3.1.44
+gitpython==3.1.45
     # via font-v
 glyphsets==1.1.0
     # via
     #   diffenator2
     #   fontbakery
     #   gftools
-glyphslib==6.10.1
+glyphslib==6.11.4
     # via
     #   bumpfontversion
     #   fontmake
@@ -201,7 +197,7 @@ jinja2==3.1.6
     #   gftools
 kurbopy==0.11.1
     # via collidoscope
-lxml==5.4.0
+lxml==6.0.0
     # via
     #   afdko
     #   fontfeatures
@@ -218,16 +214,16 @@ munkres==1.1.4
     # via fontbakery
 mutatormath==3.0.1
     # via ufoprocessor
-nanoemoji==0.15.3
+nanoemoji==0.15.8
     # via gftools
-networkx==3.4.2
+networkx==3.5
     # via gftools
 ninja==1.11.1.4
     # via
     #   diffenator2
     #   gftools
     #   nanoemoji
-numpy==2.2.5
+numpy==2.3.2
     # via
     #   blackrenderer
     #   skia-python
@@ -240,9 +236,9 @@ opentype-sanitizer==9.2.0
     # via
     #   fontbakery
     #   gftools
-opentypespec==1.9.1
+opentypespec==1.9.2
     # via fontbakery
-orjson==3.10.18
+orjson==3.11.1
     # via
     #   babelfont
     #   ufolib2
@@ -256,7 +252,7 @@ packaging==25.0
     #   gftools
 picosvg==0.22.3
     # via nanoemoji
-pillow==11.2.1
+pillow==11.3.0
     # via
     #   diffenator2
     #   gftools
@@ -272,9 +268,9 @@ protobuf==3.20.3
     #   fontbakery
     #   gflanguages
     #   gftools
-pyahocorasick==2.1.0
+pyahocorasick==2.2.0
     # via diffenator2
-pybind11==2.13.6
+pybind11==3.0.0
     # via skia-python
 pycairo==1.28.0
     # via gftools
@@ -286,9 +282,9 @@ pycparser==2.22
     # via cffi
 pygit2==1.15.0
     # via gftools
-pygithub==2.6.1
+pygithub==2.7.0
     # via gftools
-pygments==2.19.1
+pygments==2.19.2
     # via rich
 pyjwt[crypto]==2.10.1
     # via pygithub
@@ -307,9 +303,9 @@ pyyaml==6.0.2
     #   fontbakery
     #   gftools
     #   glyphsets
-regex==2024.11.6
+regex==2025.7.34
     # via nanoemoji
-requests==2.32.3
+requests==2.32.4
     # via
     #   fontbakery
     #   gftools
@@ -318,23 +314,22 @@ requests==2.32.3
     #   youseedee
 resvg-cli==0.44.0
     # via nanoemoji
-rich==14.0.0
+rich==14.1.0
     # via
     #   fontbakery
     #   gftools
 rstr==3.2.2
     # via stringbrewer
-ruamel-yaml==0.18.10
+ruamel-yaml==0.18.14
     # via gftools
 ruamel-yaml-clib==0.2.12
     # via ruamel-yaml
-selenium==4.32.0
+selenium==4.34.2
     # via diffenator2
 shaperglot==1.0.2
     # via fontbakery
 six==1.17.0
     # via
-    #   fs
     #   python-bidi
     #   python-dateutil
 skia-pathops==0.8.0.post2
@@ -342,7 +337,7 @@ skia-pathops==0.8.0.post2
     #   collidoscope
     #   gftools
     #   picosvg
-skia-python==87.8
+skia-python==138.0
     # via blackrenderer
 smmap==5.0.2
     # via gitdb
@@ -354,7 +349,7 @@ soupsieve==2.7
     # via beautifulsoup4
 sre-yield==1.2
     # via stringbrewer
-statmake==1.0.1
+statmake==1.1.0
     # via gftools
 strictyaml==1.7.3
     # via gftools
@@ -379,19 +374,20 @@ trio==0.30.0
     #   trio-websocket
 trio-websocket==0.12.2
     # via selenium
-ttfautohint-py==0.5.1
+ttfautohint-py==0.6.0
     # via gftools
-typing-extensions==4.13.2
+typing-extensions==4.14.1
     # via
     #   beautifulsoup4
+    #   cattrs
     #   pygithub
     #   selenium
-ufo2ft[cffsubr,compreffor]==3.4.3
+ufo2ft[cffsubr,compreffor]==3.6.0
     # via
     #   fontbakery
     #   fontmake
     #   nanoemoji
-ufolib2[json]==0.17.1
+ufolib2[json]==0.18.1
     # via
     #   babelfont
     #   bumpfontversion
@@ -402,7 +398,7 @@ ufolib2[json]==0.17.1
     #   vttlib
 ufolint==1.2.0
     # via fontbakery
-ufomerge==1.9.1
+ufomerge==1.9.5
     # via
     #   babelfont
     #   gftools
@@ -410,7 +406,7 @@ ufonormalizer==0.6.2
     # via afdko
 ufoprocessor==1.13.3
     # via afdko
-uharfbuzz==0.50.0
+uharfbuzz==0.51.1
     # via
     #   blackrenderer
     #   collidoscope
@@ -425,7 +421,7 @@ unicodedata2==15.1.0
     #   glyphsets
 unidecode==1.4.0
     # via gftools
-urllib3[socks]==2.4.0
+urllib3[socks]==2.5.0
     # via
     #   pygithub
     #   requests
@@ -438,8 +434,6 @@ vttlib==0.12.0
     # via gftools
 websocket-client==1.8.0
     # via selenium
-wrapt==1.17.2
-    # via deprecated
 wsproto==1.2.0
     # via trio-websocket
 youseedee==0.5.3
